# actix-web-on-cloud-run

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  cloudbuild.yaml  docker-compose.yml
app/: .dockerignore  Cargo.toml  Dockerfile  cloudbuild.yaml
app/migrations/2022-09-04-023703_create_table/: up.sql
app/src/: config.rs  crud.rs  lib.rs  main.rs  models.rs  schema.rs  utils.rs
infra/: Makefile
infra/cloud_run/: .terraform-version  backend.tf  common-vars.tf  main.tf  variables.tf
infra/cloud_sql/: backend.tf  main.tf  output.tf  variables.tf
infra/common/: common-vars.tf  provider.tf
infra/secret_manager/: backend.tf  main.tf
infra/vpc/: backend.tf  main.tf  output.tf  variables.tf
src/: config.rs  main.rs
