[package]
name = "actix-web-on-cloud-run"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7.0"
actix-web = "4.1.0"
config = "0.13.2"
dotenv = "0.15.0"
once_cell = "1.14.0"
serde = {version = "1.0.144", features = ["derive"]}

[profile.release]
strip = true
