[package]
name = "actix_web_on_cloud_run"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7.0"
actix-web = "4.1.0"
anyhow = "1.0.63"
chrono = "0.4.22"
config = "0.13.2"
diesel = { version = "2.0.0",  features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
once_cell = "1.14.0"
r2d2 = "0.8.10"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"

[profile.release]
strip = true
